feat: enhance user authentication by adding employee support and password handling in CustomUserDetailsService and DataLoader